--- a/user-management-client/src/app/features/auth/reset-password/reset-password.component.scss
+++ b/user-management-client/src/app/features/auth/reset-password/reset-password.component.scss
@@ -12,6 +12,7 @@
   }
 
   &__card {
+    background: var(--color-background-primary);
     padding: 2rem;
     border-radius: 1rem;
     box-shadow: var(--shadow-elevation-2);
@@ -25,7 +26,7 @@
   &__title {
     font-size: 2rem;
     font-weight: 700;
-    color: var(--color-text-primary);
+    color: var(--color-auth-title);
     margin: 0;
   }
 
