--- a/user-management-client/src/assets/styles/variables/_colors.scss
+++ b/user-management-client/src/assets/styles/variables/_colors.scss
@@ -15,6 +15,7 @@
   --color-text-primary: #212121;
   --color-text-secondary: #757575;
   --color-text-disabled: #bdbdbd;
+  --color-auth-title: #0d0d0d;
 
   --color-border: #e0e0e0;
   --color-divider: #e0e0e0;
@@ -42,6 +43,7 @@
   --color-text-primary: #ffffff;
   --color-text-secondary: #b0b0b0;
   --color-text-disabled: #666666;
+  --color-auth-title: #ffffff;
 
   --color-border: #333333;
   --color-divider: #333333;
